Use test container for testing Skyline audit log import
SVN r63721 |2019-05-16 19:26:33 +0000